Added Geronimo dependencies and put some first work into Geronimo integration.