@@ -9,6 +9,21 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<commons.version>0.1.1-SNAPSHOT</commons.version>
+		<!-- Geronimo settings -->
+		<geronimo.http.port>8080</geronimo.http.port>
+		<server.config.directory>${work.dir}/config</server.config.directory>
+		<server.data.directory>${work.dir}/data</server.data.directory>
+		<geronimo.debug.options>-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n</geronimo.debug.options>
+		<geronimo.memory.options>-Xms128m -Xmx512m -XX:MaxPermSize=256m</geronimo.memory.options>
+		<geronimo.options>${geronimo.memory.options} ${geronimo.debug.options}</geronimo.options>
+		<!-- JBoss -->
+		<geronimo.version>3.0.1</geronimo.version>
+		<!-- Arquillian -->
+		<arquillian.version>1.1.2.Final</arquillian.version>
+		<arquillian.test.dir>${project.build.directory}/jboss</arquillian.test.dir>
+		<!-- Cargo -->
+		<cargo.dir>${work.dir}/cargo</cargo.dir>
+		<cargo.logging>medium</cargo.logging>
 	</properties>
 
 	<groupId>com.puresoltechnologies.purifinity</groupId>
@@ -144,6 +159,11 @@
 				<artifactId>database.titan.utils</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.puresoltechnologies.purifinity</groupId>
+				<artifactId>geronimo.configuration</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 			<!-- =========================== -->
 			<!-- Specific external libraries -->
 			<!-- =========================== -->
@@ -161,6 +181,43 @@
 				<groupId>com.thinkaurelius.titan</groupId>
 				<artifactId>titan-cassandra</artifactId>
 				<version>0.4.1</version>
+			</dependency>
+			<dependency>
+				<groupId>javax</groupId>
+				<artifactId>javaee-api</artifactId>
+				<version>6.0</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>1.3.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.geronimo</groupId>
+				<artifactId>geronimo</artifactId>
+				<version>${geronimo.version}</version>
+				<classifier>bin</classifier>
+				<type>tar.gz</type>
+			</dependency>
+			<!-- Arquillian -->
+			<dependency>
+				<groupId>org.jboss.arquillian.junit</groupId>
+				<artifactId>arquillian-junit-container</artifactId>
+				<version>${arquillian.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.arquillian.core</groupId>
+				<artifactId>arquillian-core-spi</artifactId>
+				<version>${arquillian.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.arquillian.protocol</groupId>
+				<artifactId>arquillian-protocol-servlet</artifactId>
+				<version>${arquillian.version}</version>
+				<scope>test</scope>
 			</dependency>
 			<!-- Logging -->
 			<dependency>
@@ -215,6 +272,9 @@
 							<goals>
 								<goal>start</goal>
 							</goals>
+							<configuration>
+								<startNativeTransport>true</startNativeTransport>
+							</configuration>
 						</execution>
 						<execution>
 							<id>stopCassandra</id>
@@ -226,8 +286,7 @@
 						</execution>
 					</executions>
 					<configuration>
-						<listenAddress>localhost</listenAddress>
-						<nativeTransportPort>9042</nativeTransportPort>
+						<startNativeTransport>true</startNativeTransport>
 					</configuration>
 				</plugin>
 				<!--This plugin's configuration is used to store Eclipse m2e settings 
@@ -297,6 +356,8 @@
 						<validLicense>BSD style</validLicense>
 						<validLicense>ISC/BSD License</validLicense>
 						<validLicense>New BSD License</validLicense>
+						<!-- CDDL -->
+						<validLicense>CDDL + GPLv2 with classpath exception</validLicense>
 						<!-- CPL -->
 						<validLicense>Common Public License Version 1.0</validLicense>
 						<!-- EPL -->
@@ -330,6 +391,7 @@
 
 	<modules>
 		<module>database</module>
+		<module>geronimo</module>
 	</modules>
 
 </project>
